# Pascal2C

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  doc_.md
doc/: demand_analysis.md  design.md  list.md  overall_design.md  summary.md  task.md  test.md
doc/assets/: AST.excalidraw
example/: adder.pas  complex_expression.pas  example1.c  example1.pas  example1_without_whitespace.pas  example2.pas  example3.pas  merge_sort.pas  out1  out1.c  quick_sort.pas  simpl.pas  test.pas  vanilla.pas  vanilla.std
example/integration/: error.pas  factorial.pas  features.pas  gcd.pas  general.pas  mergesort.pas
src/: CMakeLists.txt  main.cc  token_generator.py  utils.hpp
src/ast/: CMakeLists.txt  ast.h  expr.cc  expr.h  program.cc  program.h  statement.cc  statement.h
src/code_generation/: abstract_symbol_table_adapter.h  ast_adapter.cc  ast_adapter.h  ast_converter.cc  ast_converter.h  ast_interface.cc  ast_interface.h  ast_printer.cc  ast_printer.h  code_generation.h  code_generator.cc  code_generator.h  symbol_item.h  symbol_table_adapter.cc  symbol_table_adapter.h  token_adapter.cc  token_adapter.h  type_adaper.cc  type_adaper.h  visitor.h
src/code_generation/optimizer/: CMakeLists.txt  calculater.cc  calculater.h  opti_common.h  opti_worker.cc  opti_worker.h  transformer.cc  transformer.h
src/common/: CMakeLists.txt  args_parser.cc  args_parser.h  common.h  common_type.h  logger.h
src/lexer/: CMakeLists.txt  Makefile  lexer.cc  lexer.h  lexer.lex  main.c  test.pas  token.cc  token.h  token_generator.py  utils.c  utils.cc
src/parser/: expr.cc  parser.cc  parser.h  program.cc  statement.cc
src/semantic/: ast.cc  ast.h  nodes.h
src/semantic_analysis/: CMakeLists.txt  errors.cc  errors.h  semantic_analysis.cc  semantic_analysis.h  symbol_table.cc  symbol_table.h
src/syntax/: CMakeLists.txt  expr.cc  program.cc  statement.cc  syntax.cc  syntax.h
test/: CMakeLists.txt  code_generation_test.cc
test/ast/: get_type_test.cc  to_string_test.cc
test/code_generation/: array_test.cc  ast_adapter_test.cc  code_generation_test.cc  const_declaration_test.cc  for_statement_test.cc  function_test.cc  if_statement_test.cc  subprogram_test.cc  symbol_table_mock.h  symbol_table_test.cc  transformer_test.cc
test/code_generation/ast_adapter/: program_test.cc
test/code_generation/opti/: test.cc
test/lexer/: lexer_test.cc
test/parser/: compound_statements_error_handle_test.cc  expr_parser_test.cc  program_parser_test.cc  statement_parser_test.cc  total_parser_test.cc
